# alpha

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
qlib/: __init__.py
qlib/backtesting/: __init__.py  engine.py  portfolio.py
qlib/data/: __init__.py  loader.py
qlib/factors/: __init__.py  base.py  macd.py  momentum.py  rsi.py  sma.py  volatility.py
qlib/metrics/: __init__.py  returns.py
research/: phase1_basic_factors.ipynb  phase2_portfolio.ipynb
tests/: test_backtesting.py  test_factors.py  test_loader.py  test_macd.py  test_metrics_returns.py  test_portfolio.py  test_rsi.py
