[project]
name = "alpha"
version = "0.1.0"
description = "my research on computationally accelerated finance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26",
    "pandas>=2.3.3",
    "pytest>=8.3.2",
    "ruff>=0.14.5",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
